--- a/assets/css/markdown-theme4.css
+++ b/assets/css/markdown-theme4.css
@@ -248,7 +248,7 @@ body,
     display: block;
     overflow-x: auto !important;
     max-width: 100%;
-    white-space: nowrap;
+    /* white-space: nowrap; */
   }
   table::-webkit-scrollbar {
   height: 4px !important;     
